OldArchive/a7cb41bc4359a662b81685bf3222c11e-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:11:1: error: missing binary operator before token "#"
 #error ERROR
 ^
